plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ex'
version = '1.0.0-T1'
description = 'Spring Boot 3 Batch'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    //Spring
	implementation 'org.springframework.boot:spring-boot-starter-batch'

    //Outer
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.kafka:kafka-streams'

    //DB
    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    testImplementation "com.h2database:h2"

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //Test
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    jvmArgs "-Xshare:off"                       // OpenJDK 64-Bit Server VM warning:
    jvmArgs "-XX:+EnableDynamicAgentLoading"    // Mockito Error
	useJUnitPlatform()

}
